--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  max-width: 100%;
   overflow: auto;
   overflow-x: hidden;
 
@@ -67,23 +68,28 @@ a {
 }
 
 .top-heading-text {
-  color: white !important;
-  font-size: 14px !important;
+  color: white;
+  font-size: 14px;
 }
 
 .menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw !important;
-  height: 80px !important;
-  background-color: white !important;
+  width: 100vw;
+  height: 80px;
+  background-color: white;
   padding: 0 40px;
 }
 
+.landing-heading {
+  font-size: 60px;
+  color: #0f013f;
+}
+
 #menu-left {
-  font-size: 40px !important;
-  height: inherit !important;
+  font-size: 40px;
+  height: inherit;
   display: flex;
   align-items: center;
   font-weight: bold;
@@ -91,16 +97,15 @@ a {
 
 #menu-left img {
   padding: 10px;
-  width: 56px !important;
-  height: 56px !important;
+  height: 80%;
 }
 
 #menu-right {
-  font-size: 14px !important;
-  height: inherit !important;
+  font-size: 14px;
+  height: inherit;
   display: flex;
   align-items: center;
-  padding: 0px 100px !important;
+  padding: 0px 100px;
 }
 
 #menu-right ul {
@@ -152,27 +157,27 @@ a {
 }
 
 .login-btn {
-  width: 155px !important;
-  height: 47px !important;
-  border-radius: 50px !important;
+  width: 155px;
+  height: 47px;
+  border-radius: 50px;
   border-color: #00B2B5;
-  background-color: #05D8E3 !important;
+  background-color: #05D8E3;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white !important;
+  color: white;
   cursor: pointer;
 
 }
 
 .typewriter-effect {
   position: absolute;
-  top: 4rem;
+  top: 2rem;
   left: 10rem;
-  /* margin-top: 4rem !important;
-  margin-left: 10rem !important; */
-  width: 360px !important;
-  height: 320px !important;
+  /* margin-top: 4rem ;
+  margin-left: 10rem ; */
+  width: 360px;
+  height: 320px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -181,12 +186,12 @@ a {
   font-weight: bold;
   font-size: 13px;
   background-color: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px) !important;
+  backdrop-filter: blur(5px);
   border-radius: 35px;
 }
 
 .typewriter-effect>.text {
-  width: 250px;
+  width: 240px;
   text-align: left;
   max-width: 0;
   animation: typing 3s steps(var(--characters)) infinite;
@@ -226,7 +231,7 @@ a {
 .register-btn {
   margin: 30px;
   margin-bottom: -40px;
-  background-color: #0f013f !important;
+  background-color: #0f013f;
 }
 
 .slideshow-container {
@@ -265,14 +270,14 @@ a {
   position: relative;
   width: 100%;
   height: fit-content;
-  background-color: white !important;
+  background-color: white;
   border: 1px solid rgb(255, 255, 255);
 }
 
 .center-content p:nth-child(1) {
   z-index: 2;
-  padding: 0px !important;
-  margin: 0px !important;
+  padding: 0px;
+  margin: 0px;
   font-size: 40px;
   text-align: center;
 
@@ -280,9 +285,9 @@ a {
 
 .center-content p:nth-child(2) {
   z-index: 2;
-  padding: 4px !important;
-  margin: 4px !important;
-  width: 100%;
+  padding: 4px;
+  margin: 4px;
+  width: 100vw;
   font-size: 15px;
   text-align: center;
 
@@ -290,68 +295,276 @@ a {
 
 .cont-group {
   display: flex;
-  justify-content: center !important;
-  align-items: center !important;
+  justify-content: center;
+  align-items: center;
   margin-top: 30px;
   padding-bottom: 20px;
 }
 
 .content-left {
-  width: 250px !important;
-  height: 250px !important;
+  width: 250px;
+  height: 250px;
   margin-bottom: 30px;
 }
 
 .content-right {
   z-index: 3;
-  width: 250px !important;
-  height: 250px !important;
-  padding: 30px;
-  margin: 30px 60px !important;
-  margin-top: -30px !important;  
-  margin-bottom: 30px !important;  
-  scale: 1.1!important;
+  width: 250px;
+  height: 250px;
+  margin: 30px 60px;
+  /* margin-top: -30px; */
+  margin-bottom: 30px;
+  scale: 1.1;
 }
 
-.bottom-content p:nth-child(1){
+.content-right img {
+  width: 100%;
+}
+
+.bottom-content p:nth-child(1) {
   margin-top: 70px;
   color: #423F8D;
-  text-align: center  !important;
-  font-weight: bold !important;
+  text-align: center;
+  font-weight: bold;
   font-size: 30px;
 }
 
-.gp{
+.gp {
   display: flex;
-  justify-content: center!important;
-  align-items: center!important;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 
 }
 
-.gp p:nth-child(2){
-  /* margin-top: -26px !important; */
-  font-weight: bold !important;
+.gp p:nth-child(2) {
+  /* margin-top: -26px ; */
+  font-weight: bold;
   text-align: left;
   padding-left: 20px;
 }
 
 .circle {
-  width: 90px !important;
-  height: 60px !important;
-  border-radius: 50%;
+  width: 420px;
+  height: 55px;
+  border-radius: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.direct{
-  background-color:#D725B0 !important; 
-  margin-bottom: 15px !important;
+.direct {
+  width: 130px;
+  height: 30px;
+  background-color: #D725B0;
+  margin-bottom: 15px;
   border: 5px solid;
   position: absolute;
   left: 50%;
   transform: translate(-50%, -100%);
-  z-index: 6 !important;
-  scale: 0.8;
+  z-index: 6;
+  margin: -10px 0;
+}
+
+.menuBtn {
+  display: block;
+}
+
+.menuBtn ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.menuBtn ul li {
+  padding: 10px;
+  text-align: center;
+}
+
+.menuBtn ul li a {
+  color: #333;
+  text-decoration: none;
+}
+
+
+/* responsive */
+@media screen and (max-width: 1000px) {
+  #menu-left {
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+  .circle {
+    border-radius: 100%;
+    width: 130px;
+    height: 40px;
+    /* scale: 1.6; */
+  }
+
+  .content-left {
+    width: 160px;
+  }
+
+  .content-right {
+    margin: 0;
+    width: 150px;
+  }
+
+  .content-right img {
+    margin-top: 30px;
+    scale: 1.05;
+  }
+
+  .center-content p:nth-child(1) {
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .center-content p:nth-child(2) {
+    width: 90vw;
+    font-size: 10px;
+    padding: 0 15px;
+    margin: 0;
+  }
+
+  .center-content {
+    /* margin-left: 45px; */
+    width: 100vw;
+  }
+
+  .typewriter-effect {
+    width: 100px;
+    height: 70px;
+    top: 45%;
+    left: 50%;
+    transform: translate(-80%, -50%);
+    padding: 20px;
+  }
+
+  .cont-group {
+    padding-left: -20px;
+  }
+
+  .top-right {
+    display: none;
+  }
+
+  .top-heading {
+    height: 25px;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  .top-heading-text {
+    font-size: 8px;
+  }
+
+  .menu {
+    height: 40px;
+    padding: 0 10px;
+  }
+
+  .menu-left img {
+    height: 20px;
+  }
+
+  .nameHeading {
+    font-size: 10px;
+  }
+
+  #menu-right {
+    display: none;
+  }
+
+  #menu-left {
+    font-size: 1rem;
+  }
+
+  .landing-heading {
+    font-size: 20px;
+    margin: 1rem;
+    padding: 1rem;
+    margin-top: -10px;
+  }
+
+  .register-btn {
+    margin: 0 0px;
+    margin-top: -25px;
+    margin-bottom: -80px;
+    scale: 0.5;
+  }
+
+  .direct {
+    scale: 0.6;
+    margin-left: -20px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+
+  #menu-left,
+  #menu-right {
+    display: none;
+  }
+
+  .menu {
+    justify-content: space-between;
+  }
+
+  #menu-toggle {
+    display: block;
+    cursor: pointer;
+    padding: 10px;
+  }
+
+  #menu-toggle .bar {
+    z-index: 100;
+    width: 25px;
+    height: 3px;
+    background-color: #0f013f;
+    margin: 5px auto;
+    transition: 0.3s;
+  }
+
+  #menu-toggle.open .bar:nth-child(1) {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  #menu-toggle.open .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  #menu-toggle.open .bar:nth-child(3) {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+
+  #menu-right {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 70%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.3s;
+  }
+
+  #menu-right ul {
+    flex-direction: column;
+  }
+
+  #menu-right li {
+    margin: 20px 0;
+  }
+
+  #menu-right.open {
+    transform: translateX(0);
+  }
 }
