--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
+    display: none;
     width: 100%;
     height: 100%;
     outline: none;
@@ -17,9 +17,11 @@
     -webkit-text-size-adjust: 100%;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(4px);
 }
 
 .white{
+    position: relative;
     background-color: white;
     width: 40%;
     height: 500px;
@@ -28,7 +30,7 @@
     border-radius: 10px;
 }
 
-.white p:nth-child(1){
+.log-top p:nth-child(1){
     color: black;
     font-size: 30px;
     font-weight: bold;
@@ -62,10 +64,35 @@
     text-transform: none;
     font-size: 1rem;
 }
+
+.input1 input:focus, textarea:focus, select:focus{
+    outline: 1px solid rgb(26, 26, 26); 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 #loginBtn{
     border: 0;
     border-radius: 50px;
     margin: 0 20px;
     color: white;
     background-color: #394eff;
+    cursor: pointer;
+}
+
+#loginBtn:hover{
+    background-color: #7481ff;
+}
+
+.bottom-login{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px !important;
+}
+.closeBtn{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    height: 24px;
+    width: 24px;
+    scale: 0.7;
+    cursor: pointer;
 }
