--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -96,3 +96,20 @@
     scale: 0.7;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 768px) {
+    .white{
+        width: 60%;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .white{
+        width: 100vw;
+        height: 100vh;
+        padding: 400px 60px 0 40px;
+    }
+    .closeBtn{
+        top: 400px;
+        right: 40px;
+    }
+}
