--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -80,6 +80,7 @@ a {
   height: 80px;
   background-color: white;
   padding: 0 40px;
+  z-index: 20;
 }
 
 .landing-heading {
@@ -93,6 +94,7 @@ a {
   display: flex;
   align-items: center;
   font-weight: bold;
+  z-index: 20;
 }
 
 #menu-left img {
@@ -308,7 +310,7 @@ a {
 }
 
 .content-right {
-  z-index: 3;
+  z-index: 321 !important;
   width: 250px;
   height: 250px;
   margin: 30px 60px;
@@ -477,6 +479,7 @@ a {
 
   #menu-right {
     display: none;
+    z-index: 600;
   }
 
   #menu-left {
@@ -505,6 +508,10 @@ a {
 
 @media only screen and (max-width: 768px) {
 
+  .login-btn {
+    margin-top: -200px;
+  }
+
   #menu-left,
   #menu-right {
     display: none;
@@ -521,7 +528,7 @@ a {
   }
 
   #menu-toggle .bar {
-    z-index: 100;
+    z-index: 700 !important;
     width: 25px;
     height: 3px;
     background-color: #0f013f;
@@ -546,7 +553,7 @@ a {
     top: 0;
     right: 0;
     height: 100vh;
-    width: 70%;
+    width: 10%;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -554,17 +561,30 @@ a {
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.3s;
+    /* padding: ; */
   }
 
   #menu-right ul {
     flex-direction: column;
+    width: 100%;
+    scale: 1.1;
   }
 
   #menu-right li {
     margin: 20px 0;
   }
+  #menu-right li a{
+    width: 100%;
+    padding: 0;
+  }
+  #menu-right li a:hover{
+    background-color: #00B2B5;
+  }
 
   #menu-right.open {
     transform: translateX(0);
+  }
+  .login-btn{
+    z-index: 200;
   }
 }
